fix social spacing

--- a/src/stylus/4.modules.content.styl
+++ b/src/stylus/4.modules.content.styl
@@ -52,7 +52,7 @@ $paragraph-size = 22*$px
 	align-items: center
 	justify-content: space-around
 	width: 320px
-margin: $vertical-space 0
+	margin-top: $vertical-space
 
 
 //
